--- a/islandora_image_images.yml
+++ b/islandora_image_images.yml
@@ -1,6 +1,6 @@
-id: islandora_basic_image_json_over_rest
+id: islandora_basic_image_images_json_over_rest
 migration_group: 'Islandora 7.x Over REST'
-label: 'Islandora 7.x JSON over REST'
+label: 'Islandora 7.x JSON over REST (Images)'
 
 source:
   plugin: url
@@ -17,32 +17,26 @@ source:
       name: field_pid
       label: PID
       selector: PID
-    -
-      name: title
-      label: Title
-      selector: fgs_label_t
-    -
-      field_web_content:
-        plugin: migration_lookup
-        migration: islandora_basic_image_images_json_over_rest
-        source: mid
-        no_stub: true
   ids:
     field_pid:
       type: string
 
 process:
-  type:
-    plugin: default_value
-    default_value: islandora_image
-  title: title
-  field_pid: field_pid
-  # You will need to change this configuration value to match the node ID of your destination collection.
-  field_memberof: '40'
+  source_full_path:
+     plugin: concat
+     delimiter: /
+     source:
+       - 'http://digital.lib.sfu.ca/islandora/object'
+       - field_pid
+       - 'datastream/OBJ/download'
+  uri:
+     plugin: download
+     source: '@source_full_path'
+#  parent:
+#     plugin: migration_lookup
+#     migration: islandora_basic_image_json_over_rest
+#     source: field_web_content
 
 destination:
-  plugin: 'entity:node'
-
-migration_dependencies:
-  require:
-    - islandora_basic_image_images_json_over_rest
+  plugin: 'entity:media'
+  default_bundle: web_content
